Fix overflow issue on mobile devices

--- a/_sass/bem/common.blocks/_menu.scss
+++ b/_sass/bem/common.blocks/_menu.scss
@@ -15,7 +15,7 @@
   }
 
   @include media("<tablet") {
-    width: 100vw;
+    width: 100%;
     height: 50px;
   }
 }
